--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,16 @@ ul {
   height: 700px;
   width: 500px;
   overflow: hidden;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+    transition: opacity 250ms ease;
+}
+
+.animation-container:hover h1 {
+    opacity: 0;
 }
 
 /* sun start */
