--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .animation-container {
@@ -19,128 +19,176 @@ ul {
 }
 
 h1 {
-    transition: opacity 1000ms ease;
+  transition: opacity 1000ms ease;
 }
 
 .animation-container:hover h1 {
-    opacity: 0;
+  opacity: 0;
 }
 
 /* sun start */
 
 .sun-container {
-    width: 400px;
-    height: 400px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(50%, -50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 0;
-    transition: opacity 2000ms cubic-bezier(.98,0,.99,0);
-    z-index: 10;
+  width: 400px;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(50%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 2000ms cubic-bezier(0.98, 0, 0.99, 0);
+  z-index: 10;
 }
 
 .sun {
-    width: 200px;
-    height: 200px;
-    background-color: yellow;
-    border-radius: 100%;
+  width: 200px;
+  height: 200px;
+  background-color: yellow;
+  border-radius: 100%;
 }
 
 .sunlight1 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight2 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 22.5deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 22.5deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight3 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 45deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 45deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight4 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 67.5deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 67.5deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight5 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 90deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 90deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight6 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 112.5deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 112.5deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight7 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 135deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 135deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 .sunlight8 {
-    position: absolute;
-    width: 400px;
-    height: 20px;
-    background: linear-gradient(90deg, rgba(249,255,6,1) 0%, rgba(249,249,249,0) 25%, rgba(249,249,249,0) 75%, rgba(249,255,6,1) 100%);
-    border-radius: 10px;
-    rotate: 157.5deg;
-    animation: sunAnim 10s linear 0s infinite normal forwards;
+  position: absolute;
+  width: 400px;
+  height: 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(249, 255, 6, 1) 0%,
+    rgba(249, 249, 249, 0) 25%,
+    rgba(249, 249, 249, 0) 75%,
+    rgba(249, 255, 6, 1) 100%
+  );
+  border-radius: 10px;
+  rotate: 157.5deg;
+  animation: sunAnim 10s linear 0s infinite normal forwards;
 }
 
 @keyframes sunAnim {
-	0% {
-		transform: rotate(0);
-	}
+  0% {
+    transform: rotate(0);
+  }
 
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .animation-container:hover .sun-container {
-    opacity: 1;
+  opacity: 1;
 }
 
 /* sun end */
@@ -148,213 +196,221 @@ h1 {
 /* grass start */
 
 .grass-container {
-    width: 500px;
-    height: 110px;
-    position: absolute;
-    bottom: 0;
-    transform: translate(0%, 10px);
-    opacity: 0;
-    transition: opacity 2000ms cubic-bezier(.98,0,.99,0);
-    z-index: 10;
+  width: 500px;
+  height: 110px;
+  position: absolute;
+  bottom: 0;
+  transform: translate(0%, 10px);
+  opacity: 0;
+  transition: opacity 2000ms cubic-bezier(0.98, 0, 0.99, 0);
+  z-index: 10;
 }
 
 .grass-all {
-    display: flex;
-    height: 100%;
-    align-items: flex-end;
+  display: flex;
+  height: 100%;
+  align-items: flex-end;
 }
 
 .grass-item {
-    height: 100%;
-    width: 20px;
-    background-color: green;
-    border: 1px solid;
-    border-color: darkgreen;
-    clip-path: polygon(50% 0%, 85% 25%, 100% 80%, 100% 100%, 0 100%, 0 80%, 15% 25%);
+  height: 100%;
+  width: 20px;
+  background-color: green;
+  border: 1px solid;
+  border-color: darkgreen;
+  clip-path: polygon(
+    50% 0%,
+    85% 25%,
+    100% 80%,
+    100% 100%,
+    0 100%,
+    0 80%,
+    15% 25%
+  );
 }
 
 .grass-height {
-    height: 110px;
+  height: 110px;
 }
 
 .grass-height1 {
-    height: 100px;
+  height: 100px;
 }
 
 .grass-height2 {
-    height: 95px;
+  height: 95px;
 }
 
 .grass-height3 {
-    height: 105px;
+  height: 105px;
 }
 
 .grass-height4 {
-    height: 90px;
+  height: 90px;
 }
 
 .grass-anim1 {
-    animation: grassAnim1 5000ms linear 0s infinite normal none;
+  animation: grassAnim1 5000ms linear 0s infinite normal none;
 }
 
 @keyframes grassAnim1 {
-	0%,
-	100% {
-		transform: translateX(0%);
-		transform-origin: 50% 50%;
-	}
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
 
-	15% {
-		transform: translateX(-10px) rotate(-5deg);
-	}
+  15% {
+    transform: translateX(-10px) rotate(-5deg);
+  }
 
-	30% {
-		transform: translateX(5px) rotate(5deg);
-	}
+  30% {
+    transform: translateX(5px) rotate(5deg);
+  }
 
-	45% {
-		transform: translateX(-5px) rotate(-4deg);
-	}
+  45% {
+    transform: translateX(-5px) rotate(-4deg);
+  }
 
-	60% {
-		transform: translateX(3px) rotate(4deg);
-	}
+  60% {
+    transform: translateX(3px) rotate(4deg);
+  }
 
-	75% {
-		transform: translateX(-2px) rotate(-3deg);
-	}
+  75% {
+    transform: translateX(-2px) rotate(-3deg);
+  }
 }
 
 .grass-anim2 {
-    animation: grassAnim2 4621ms linear 0s infinite normal none;
+  animation: grassAnim2 4621ms linear 0s infinite normal none;
 }
 
 @keyframes grassAnim2 {
-	0%,
-	100% {
-		transform: translateX(0%);
-		transform-origin: 50% 50%;
-	}
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
 
-	15% {
-		transform: translateX(-10px) rotate(-5deg);
-	}
+  15% {
+    transform: translateX(-10px) rotate(-5deg);
+  }
 
-	30% {
-		transform: translateX(5px) rotate(5deg);
-	}
+  30% {
+    transform: translateX(5px) rotate(5deg);
+  }
 
-	45% {
-		transform: translateX(-5px) rotate(-4deg);
-	}
+  45% {
+    transform: translateX(-5px) rotate(-4deg);
+  }
 
-	60% {
-		transform: translateX(3px) rotate(4deg);
-	}
+  60% {
+    transform: translateX(3px) rotate(4deg);
+  }
 
-	75% {
-		transform: translateX(-2px) rotate(-3deg);
-	}
+  75% {
+    transform: translateX(-2px) rotate(-3deg);
+  }
 }
 
 .grass-anim3 {
-    animation: grassAnim3 4128ms linear 0s infinite normal none;
+  animation: grassAnim3 4128ms linear 0s infinite normal none;
 }
 
 @keyframes grassAnim3 {
-	0%,
-	100% {
-		transform: translateX(0%);
-		transform-origin: 50% 50%;
-	}
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
 
-	15% {
-		transform: translateX(-10px) rotate(-5deg);
-	}
+  15% {
+    transform: translateX(-10px) rotate(-5deg);
+  }
 
-	30% {
-		transform: translateX(5px) rotate(5deg);
-	}
+  30% {
+    transform: translateX(5px) rotate(5deg);
+  }
 
-	45% {
-		transform: translateX(-5px) rotate(-4deg);
-	}
+  45% {
+    transform: translateX(-5px) rotate(-4deg);
+  }
 
-	60% {
-		transform: translateX(3px) rotate(4deg);
-	}
+  60% {
+    transform: translateX(3px) rotate(4deg);
+  }
 
-	75% {
-		transform: translateX(-2px) rotate(-3deg);
-	}
+  75% {
+    transform: translateX(-2px) rotate(-3deg);
+  }
 }
 
 .grass-anim4 {
-    animation: grassAnim4 3567ms linear 0s infinite normal none;
+  animation: grassAnim4 3567ms linear 0s infinite normal none;
 }
 
 @keyframes grassAnim4 {
-	0%,
-	100% {
-		transform: translateX(0%);
-		transform-origin: 50% 50%;
-	}
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
 
-	15% {
-		transform: translateX(-10px) rotate(-5deg);
-	}
+  15% {
+    transform: translateX(-10px) rotate(-5deg);
+  }
 
-	30% {
-		transform: translateX(5px) rotate(5deg);
-	}
+  30% {
+    transform: translateX(5px) rotate(5deg);
+  }
 
-	45% {
-		transform: translateX(-5px) rotate(-4deg);
-	}
+  45% {
+    transform: translateX(-5px) rotate(-4deg);
+  }
 
-	60% {
-		transform: translateX(3px) rotate(4deg);
-	}
+  60% {
+    transform: translateX(3px) rotate(4deg);
+  }
 
-	75% {
-		transform: translateX(-2px) rotate(-3deg);
-	}
+  75% {
+    transform: translateX(-2px) rotate(-3deg);
+  }
 }
 
 .grass-anim5 {
-    animation: grassAnim5 5643ms linear 0s infinite normal none;
+  animation: grassAnim5 5643ms linear 0s infinite normal none;
 }
 
 @keyframes grassAnim5 {
-	0%,
-	100% {
-		transform: translateX(0%);
-		transform-origin: 50% 50%;
-	}
+  0%,
+  100% {
+    transform: translateX(0%);
+    transform-origin: 50% 50%;
+  }
 
-	15% {
-		transform: translateX(-10px) rotate(-5deg);
-	}
+  15% {
+    transform: translateX(-10px) rotate(-5deg);
+  }
 
-	30% {
-		transform: translateX(5px) rotate(5deg);
-	}
+  30% {
+    transform: translateX(5px) rotate(5deg);
+  }
 
-	45% {
-		transform: translateX(-5px) rotate(-4deg);
-	}
+  45% {
+    transform: translateX(-5px) rotate(-4deg);
+  }
 
-	60% {
-		transform: translateX(3px) rotate(4deg);
-	}
+  60% {
+    transform: translateX(3px) rotate(4deg);
+  }
 
-	75% {
-		transform: translateX(-2px) rotate(-3deg);
-	}
+  75% {
+    transform: translateX(-2px) rotate(-3deg);
+  }
 }
 
 .animation-container:hover .grass-container {
-    opacity: 1;
+  opacity: 1;
 }
 
 /* grass end */
@@ -362,90 +418,142 @@ h1 {
 /* home start */
 
 .vert-wood {
-    height: 300px;
-    width: 50px;
-    background-color: sienna;
-    position: absolute;
-    border: 2px solid;
-    border-color: black;
+  height: 300px;
+  width: 50px;
+  background-color: sienna;
+  position: absolute;
+  border: 2px solid;
+  border-color: black;
 }
 
 .vert1 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 0;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 0;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert1 {
-    transform: rotate(0);
-    transform: translateX(140px);
+  transform: rotate(0);
+  transform: translateX(140px);
 }
 
 .vert2 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 10px;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 10px;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert2 {
-    transform: rotate(0);
-    transform: translate(190px, 10px);
+  transform: rotate(0);
+  transform: translate(190px, 10px);
 }
 
 .vert3 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 20px;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 20px;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert3 {
-    transform: rotate(0);
-    transform: translate(240px, 20px);
+  transform: rotate(0);
+  transform: translate(240px, 20px);
 }
 
 .vert4 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 30px;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 30px;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert4 {
-    transform: rotate(0);
-    transform: translate(290px, 30px);
+  transform: rotate(0);
+  transform: translate(290px, 30px);
 }
 
 .vert5 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 40px;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 40px;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert5 {
-    transform: rotate(0);
-    transform: translate(340px, 40px);
+  transform: rotate(0);
+  transform: translate(340px, 40px);
 }
 
 .vert6 {
-    transform: rotate(90deg);
-    transform-origin: bottom right;
-    bottom: 50px;
-    left: -40px;
-    transition: all 1000ms ease-in-out;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 50px;
+  left: -40px;
+  transition: all 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert6 {
-    transform: rotate(0);
-    transform: translate(390px, 50px);
+  transform: rotate(0);
+  transform: translate(390px, 50px);
+}
+
+.attic {
+  background-color: burlywood;
+  position: absolute;
+  border: 2px solid;
+  border-color: black;
+}
+
+.att1 {
+  height: 50px;
+  width: 300px;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 0;
+  right: 50px;
+  transition: all 1000ms ease-in-out;
+}
+
+.animation-container:hover .att1 {
+  transform: rotate(0);
+  transform: translate(-50px, -300px);
+}
+
+.att2 {
+  height: 50px;
+  width: 200px;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 0;
+  right: 60px;
+  transition: all 1000ms ease-in-out;
+}
+
+.animation-container:hover .att2 {
+  transform: rotate(0);
+  transform: translate(-90px, -350px);
+}
+
+.att3 {
+  height: 50px;
+  width: 100px;
+  transform: rotate(90deg);
+  transform-origin: bottom right;
+  bottom: 0;
+  right: 70px;
+  transition: all 1000ms ease-in-out;
+}
+
+.animation-container:hover .att3 {
+  transform: rotate(0);
+  transform: translate(-130px, -400px);
 }
 
 /* home end */
