--- a/styles.css
+++ b/styles.css
@@ -435,8 +435,7 @@ h1 {
 }
 
 .animation-container:hover .vert1 {
-  transform: rotate(0);
-  transform: translateX(140px);
+  transform: translateX(140px) rotate(0);
 }
 
 .vert2 {
@@ -448,8 +447,7 @@ h1 {
 }
 
 .animation-container:hover .vert2 {
-  transform: rotate(0);
-  transform: translate(190px, 10px);
+  transform: translate(190px, 10px) rotate(0);
 }
 
 .vert3 {
@@ -461,8 +459,7 @@ h1 {
 }
 
 .animation-container:hover .vert3 {
-  transform: rotate(0);
-  transform: translate(240px, 20px);
+  transform: translate(240px, 20px) rotate(0);
 }
 
 .vert4 {
@@ -474,8 +471,7 @@ h1 {
 }
 
 .animation-container:hover .vert4 {
-  transform: rotate(0);
-  transform: translate(290px, 30px);
+  transform: translate(290px, 30px) rotate(0);
 }
 
 .vert5 {
@@ -487,8 +483,7 @@ h1 {
 }
 
 .animation-container:hover .vert5 {
-  transform: rotate(0);
-  transform: translate(340px, 40px);
+  transform: translate(340px, 40px) rotate(0);
 }
 
 .vert6 {
@@ -500,8 +495,7 @@ h1 {
 }
 
 .animation-container:hover .vert6 {
-  transform: rotate(0);
-  transform: translate(390px, 50px);
+  transform: translate(390px, 50px) rotate(0);
 }
 
 .attic {
@@ -522,8 +516,7 @@ h1 {
 }
 
 .animation-container:hover .att1 {
-  transform: rotate(0);
-  transform: translate(-50px, -300px);
+  transform: translate(-50px, -300px) rotate(0);
 }
 
 .att2 {
@@ -537,8 +530,7 @@ h1 {
 }
 
 .animation-container:hover .att2 {
-  transform: rotate(0);
-  transform: translate(-90px, -350px);
+  transform: translate(-90px, -350px) rotate(0);
 }
 
 .att3 {
@@ -552,8 +544,41 @@ h1 {
 }
 
 .animation-container:hover .att3 {
-  transform: rotate(0);
-  transform: translate(-130px, -400px);
+  transform: translate(-130px, -400px) rotate(0);
+}
+
+.roof {
+  height: 50px;
+  width: 300px;
+  background-color: brown;
+  position: absolute;
+  border: 2px solid;
+  border-color: black;
+  z-index: 2;
+}
+
+.roof1 {
+  transform: rotate(110deg);
+  transform-origin: bottom right;
+  bottom: 16px;
+  left: 20px;
+  transition: all 1000ms ease-in-out;
+}
+
+.animation-container:hover .roof1 {
+  transform: translate(-35px, -450px) rotate(-45deg);
+}
+
+.roof2 {
+  transform: rotate(110deg);
+  transform-origin: bottom right;
+  bottom: 16px;
+  left: 30px;
+  transition: all 1000ms ease-in-out;
+}
+
+.animation-container:hover .roof2 {
+  transform: translate(96px, -238px) rotate(45deg);
 }
 
 /* home end */
