--- a/styles.css
+++ b/styles.css
@@ -431,7 +431,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 0;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert1 {
@@ -443,7 +443,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 10px;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert2 {
@@ -455,7 +455,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 20px;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert3 {
@@ -467,7 +467,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 30px;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert4 {
@@ -479,7 +479,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 40px;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert5 {
@@ -491,7 +491,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 50px;
   left: -40px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .vert6 {
@@ -512,7 +512,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 0;
   right: 50px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .att1 {
@@ -526,7 +526,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 0;
   right: 60px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .att2 {
@@ -540,7 +540,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 0;
   right: 70px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .att3 {
@@ -562,7 +562,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 16px;
   left: 20px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .roof1 {
@@ -574,7 +574,7 @@ h1 {
   transform-origin: bottom right;
   bottom: 16px;
   left: 30px;
-  transition: all 1000ms ease-in-out;
+  transition: transform 1000ms ease-in-out;
 }
 
 .animation-container:hover .roof2 {
