--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ h1 {
   height: 400px;
   position: absolute;
   top: 0;
-  right: 0;
+  right: -250px;
   transform: translate(50%, -50%);
   display: flex;
   align-items: center;
@@ -42,6 +42,42 @@ h1 {
   opacity: 0;
   transition: opacity 2000ms cubic-bezier(0.98, 0, 0.99, 0);
   z-index: 10;
+  animation: sunMove 10s linear 0s infinite normal backwards;
+}
+
+.moon-container {
+  width: 200px;
+  height: 200px;
+  background-color: lightgrey;
+  border-radius: 100%;
+  position: absolute;
+  top: 0;
+  right: -250px;
+  transform: translate(50%, -50%);
+  opacity: 0;
+  transition: opacity 2000ms cubic-bezier(0.98, 0, 0.99, 0);
+  animation: moonMove 10s linear 4s infinite normal backwards;
+  z-index: 10;
+}
+
+@keyframes sunMove {
+  0% {
+    transform: translate(0, -200px);
+  }
+
+  100% {
+    transform: translate(-1000px, -200px);
+  }
+}
+
+@keyframes moonMove {
+  0% {
+    transform: translate(0, 0px);
+  }
+
+  100% {
+    transform: translate(-1000px, 0px);
+  }
 }
 
 .sun {
@@ -188,11 +224,40 @@ h1 {
   }
 }
 
-.animation-container:hover .sun-container {
+.animation-container:hover .sun-container,
+.animation-container:hover .moon-container {
   opacity: 1;
 }
 
 /* sun end */
+
+/* night start */
+
+.night-filter {
+  opacity: 0;
+  background-color: black;
+  height: 700px;
+  width: 500px;
+  position: absolute;
+  z-index: 7;
+  animation: nightAnim 10s ease-in-out 4s infinite normal backwards;
+}
+
+@keyframes nightAnim {
+  0% {
+    opacity:0;
+  }
+
+  50% {
+    opacity:0.5;
+  }
+
+  100% {
+    opacity:0;
+  }
+}
+
+/* nightend */
 
 /* grass start */
 
@@ -204,7 +269,7 @@ h1 {
   transform: translate(0%, 10px);
   opacity: 0;
   transition: opacity 2000ms cubic-bezier(0.98, 0, 0.99, 0);
-  z-index: 10;
+  z-index: 5;
 }
 
 .grass-all {
